--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/jigs_and_fixtures_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/jigs_and_fixtures_notes.html
@@ -69,7 +69,7 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools Questions</a>
+                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Jigs & Fixtures Questions</a>
                     </div>
                 </div>
             </div>
