--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/performance_characteristics_of_materials.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/performance_characteristics_of_materials.html
@@ -10,10 +10,10 @@
             <h2>Performance characteristics of materials</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_pprs_a_brds_notes.html">Performance characteristics of papers and boards</a>
@@ -22,90 +22,82 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/polymersheet.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_plymer_shet_notes.html">Performance characteristics of polymer based sheet and film</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html">Performance characteristics of polymer based sheet and film</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_woods_notes.html">Performance characteristics of woods
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_woods_notes.html">Performance characteristics of woods</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_metals_notes.html">Performance characteristics of metals
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_metals_notes.html">Performance characteristics of metals</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\perform_chcteristic_of_polymers_notes.html">Performance characteristics of polymers
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_polymers_notes.html">Performance characteristics of polymers</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\elastomers_notes.html">Elastomers
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/elastomers_notes.html">Elastomers</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio9.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\biodegradable_polymers_notes.html">Biodegradable polymers
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/biodegradable_polymers_notes.html">Biodegradable polymers</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_composites_notes.html">Composites
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html">Composites</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_smart_materials_notes.html">Smart materials
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_smart_materials_notes.html">Smart materials</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_modern_materials_notes.html">Modern materials
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_modern_materials_notes.html">Modern materials</a>
                         </div>
                     </div>
                 </div>
