--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/materialsnotes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/materialsnotes.html
@@ -86,10 +86,10 @@
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
