--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio5.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/finishing_cover.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_topics/the_use_of_finishes.html">The use of finishes</a>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio8.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio9.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio10.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_topics/protecting_designs_and_intellectual_property.html">Protecting designs and intellectual property</a>
@@ -121,7 +121,7 @@
                 </div>
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio11.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio11.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_topics/feasibility_studies.html">Feasibility studies</a>
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/userCentreDesign.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_topics/enterprise_a_marketing_in_dev_of_products.html">Enterprise and marketing in the development of products</a>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_topics/design_communication.html">Design communication</a>
@@ -163,7 +163,7 @@
 
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio13.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio13.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="notes_topics/MathematicsForD&T.html">Mathematics for D&T</a>
