--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/digital_design_and_manufacture.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/digital_design_and_manufacture.html
@@ -10,10 +10,10 @@
             <h2>Digital design and manufacture</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">  
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAD.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/aqa_cad_notes.html">Computer aided design (CAD)</a>
@@ -22,52 +22,46 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAM.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_cam_notes.html">Computer aided manufacture (CAM)
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_cam_notes.html">Computer aided manufacture (CAM)</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/maths-trig.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_virtual_modelling_notes.html">Virtual modelling
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_virtual_modelling_notes.html">Virtual modelling</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/effectsoftechdev.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_rapid_prototyping_processes_notes.html">Rapid prototyping processes
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_rapid_prototyping_processes_notes.html">Rapid prototyping processes</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\electronic_data_interchange_notes.html">Electronic data interchange
-
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/electronic_data_interchange_notes.html">Electronic data interchange</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/note_pic.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\ppc_networking_notes.html">Production, planning and control (PPC) networking
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/ppc_networking_notes.html">Production, planning and control (PPC) networking</a>
                         </div>
                     </div>
                 </div>
