--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/enterprise_a_marketing_in_dev_of_products.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/enterprise_a_marketing_in_dev_of_products.html
@@ -13,7 +13,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/modelCost.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/enterprise_a_marketing__dev_o_prod_notes.html">Enterprise and marketing in the development of products</a>
