--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/materials_and_their_applications.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/materials_and_their_applications.html
@@ -10,10 +10,10 @@
             <h2> Materials and their applications</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/classification_of_materials_notes.html">Classification of materials</a>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/perfcharmat1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/methods_for_invstigating_a_test_materials_notes.html">Methods for investigating and testing materials</a>
