--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/modern_industrial_and_commerical_practice.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/modern_industrial_and_commerical_practice.html
@@ -10,20 +10,19 @@
             <h2>Modern industrial and commercial practice</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/modernManufacturingMethods.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html">Scales of production
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html">Scales of production</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/standardsForProducts.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html">Efficient use of materials</a>
@@ -32,17 +31,16 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html">The use of computer systems
-                            </a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html">The use of computer systems</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/sub_assemly_notes.html">Sub-assembly</a>
@@ -53,9 +51,9 @@
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
