--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/the_requirements_for_prod_design_and_development.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/the_requirements_for_prod_design_and_development.html
@@ -7,14 +7,13 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2> The requirements for product design and development
-            </h2>
+            <h2> The requirements for product design and development</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/product_development_and_improvement_notes.html">Product development and improvement</a>
@@ -23,10 +22,10 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/projectManagement.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\inclusive_design_notes.html">Inclusive design</a>
+                            <a href="notes_pages/inclusive_design_notes.html">Inclusive design</a>
                         </div>
                     </div>
                 </div>
