--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/the_use_of_finishes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/the_use_of_finishes.html
@@ -10,10 +10,10 @@
             <h2>Safe Working Practices</h2>
         </div>
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html">Paper and board finishing</a>
@@ -22,10 +22,28 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/polymersheet.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\paper_a_board_printing_processes_notes.html">Paper and board printing processes</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/paper_a_board_printing_processes_notes.html">Paper and board printing processes</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages/polymer_finishing_notes.html">Polymer finishing</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote2.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html">Metal finishing</a>
                         </div>
                     </div>
                 </div>
@@ -34,25 +52,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\polymer_finishing_notes.html">Polymer finishing</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\metal_finishing_notes.html">Metal finishing</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\wood_finishing_notes.html">Wood finishing</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/wood_finishing_notes.html">Wood finishing</a>
                         </div>
                     </div>
                 </div>
