--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
@@ -25,7 +25,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="../aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html">Technical Principles</a>
+                            <a href="../aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html">Paper 1: Technical Principles</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="../aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html">Designing and Making Principles</a>
+                            <a href="../aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html">Paper 2: Designing and Making Principles (Coming soon)</a>
                         </div>
                     </div>
                 </div>
