--- a/notes/notes_level/notes_gcse_examboard.html
+++ b/notes/notes_level/notes_gcse_examboard.html
@@ -25,7 +25,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="notes_topics/materialsnotes.html">AQA GCSE Notes</a>
+                            <a href="notes_topics/.html">AQA GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html">Edexcel GCSE Notes</a>
+                            <a href="notes_topics/.html">Edexcel GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/ProcessesTechniquesAndSpecialistTools.html">OCR GCSE Notes</a>
+                            <a href="notes_topics/.html">OCR GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>                
