--- a/notes/notes_level.html
+++ b/notes/notes_level.html
@@ -45,7 +45,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_level/notes_pregcse_examboard.html">Pre-GCSE Notes</a>
+                            <a href="notes_level/notes_pregcse_examboard.html">Pre-GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>                
