--- a/notes/notes_level/notes_alevel_examboard.html
+++ b/notes/notes_level/notes_alevel_examboard.html
@@ -44,7 +44,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_examboard/ocr_alevel_notes/ocr_alevel_notes.html">OCR A-Level Notes</a>
+                            <a href="notes_examboard/ocr_alevel_notes/ocr_alevel_notes.html">OCR A-Level Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>                
